--- a/analogWIndSpeedExample/analogWIndSpeedExample.vcxproj
+++ b/analogWIndSpeedExample/analogWIndSpeedExample.vcxproj
@@ -147,4 +147,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties arduino.upload.port="COM4" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
