--- a/analogWIndSpeedExample/analogWIndSpeedExample.vcxproj.filters
+++ b/analogWIndSpeedExample/analogWIndSpeedExample.vcxproj.filters
@@ -33,10 +33,10 @@
     <None Include="sharing project code.txt">
       <Filter>Resource Files</Filter>
     </None>
-    <None Include="src\LocalHeader1.h">
+    <None Include="analogWIndSpeedExample.ino" />
+    <None Include="src\filter_avgCalc_settings.h">
       <Filter>Header Files</Filter>
     </None>
-    <None Include="analogWIndSpeedExample.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.analogWIndSpeedExample.vsarduino.h">
@@ -45,10 +45,30 @@
     <ClInclude Include="windSpeed.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SimpleTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="filterReadForAvgCalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="windSpeed.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimpleTimer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="filterReadForAvgCalc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="analogWIndSpeedExample.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
